engine/codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__plan_update_with_note_and_wrapping_snapshot.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 2632
expression: rendered
---
Compact
• Updated Plan · 1/4 complete
  └ □ Harden Grafana client err…
    □ Add tests for transient f…
    □ Document the retry behavi…

Full
• Updated Plan
  └ I’ll update Grafana call
    error handling by adding
    retries and clearer messages
    when the backend is
    unreachable.
    ✔ Investigate existing error
      paths and logging around
      HTTP timeouts
    □ Harden Grafana client
      error handling with retry/
      backoff and user‑friendly
      messages
    □ Add tests for transient
      failure scenarios and
      surfacing to the UI
    □ Document the retry
      behavior
