engine/codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__ps_output_halfwidth_sound_marks_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---
/ps

Background terminals

  • echo ｶﾞﾊﾟｶﾞﾊﾟ [...]
    ↳ output ｶﾞﾊﾟ [...]
